--- a/pike/.gitignore
+++ b/pike/.gitignore
@@ -1,3 +1,4 @@
+/Makefile
 /Pike_v0.1.tar.gz
 /Pike_v0.2.tar.gz
 /alpha
@@ -5,6 +6,9 @@
 /alpha-no-debug
 /alpha_cc
 /build
+/config.log
+/config.status
+/configure
 /mudlib
 /reports
 /smap
