Now with CVS-id
Rev: server/modules/directories/directories.pike:1.4
Rev: server/modules/directories/fastdir.pike:1.3
Rev: server/modules/directories/indexfiles.pike:1.3
Rev: server/modules/examples/fnord.pike:1.2
Rev: server/modules/filesystems/filesystem.pike:1.4
Rev: server/modules/filesystems/secure_fs.pike:1.4
Rev: server/modules/filesystems/userfs.pike:1.5
Rev: server/modules/filters/hostredirect.pike:1.3
Rev: server/modules/filters/htaccess.pike:1.4
Rev: server/modules/filters/redirect.pike:1.3
Rev: server/modules/filters/relay.pike:1.3
Rev: server/modules/logging/client_logger.pike:1.3
Rev: server/modules/logging/home_logger.pike:1.4
Rev: server/modules/logging/nologging.pike:1.3
Rev: server/modules/misc/contenttypes.pike:1.3
Rev: server/modules/misc/ismap.pike:1.3
Rev: server/modules/misc/userdb.pike:1.4
Rev: server/modules/proxies/connect.pike:1.3
Rev: server/modules/proxies/ftpgateway.pike:1.4
Rev: server/modules/proxies/gopher.pike:1.3
Rev: server/modules/proxies/proxy.pike:1.6
Rev: server/modules/proxies/wais.pike:1.3
Rev: server/modules/scripting/cgi.pike:1.3
Rev: server/modules/scripting/fcgi.pike:1.3
Rev: server/modules/scripting/pikescript.pike:1.3
Rev: server/modules/tags/header.pike:1.3
Rev: server/modules/tags/htmlparse.pike:1.6
Rev: server/modules/tags/indirect_href.pike:1.3
Rev: server/modules/tags/language.pike:1.3
Rev: server/modules/tags/lpctag.pike:1.3
Rev: server/modules/tags/tablify.pike:1.3
Rev: server/modules/tags/tablist.pike:1.3
Rev: server/modules/tags/variable.pike:1.3

--- a/.gitattributes
+++ b/.gitattributes
@@ -26,3 +26,36 @@
 /extern/fast_cgi/libfcgi/fcgiapp.c foreign_ident
 /extern/fast_cgi/libfcgi/strerror.c foreign_ident
 /server/bin/garbagecollector.pike foreign_ident
+/server/modules/directories/directories.pike foreign_ident
+/server/modules/directories/fastdir.pike foreign_ident
+/server/modules/directories/indexfiles.pike foreign_ident
+/server/modules/examples/fnord.pike foreign_ident
+/server/modules/filesystems/filesystem.pike foreign_ident
+/server/modules/filesystems/secure_fs.pike foreign_ident
+/server/modules/filesystems/userfs.pike foreign_ident
+/server/modules/filters/hostredirect.pike foreign_ident
+/server/modules/filters/htaccess.pike foreign_ident
+/server/modules/filters/redirect.pike foreign_ident
+/server/modules/filters/relay.pike foreign_ident
+/server/modules/logging/client_logger.pike foreign_ident
+/server/modules/logging/home_logger.pike foreign_ident
+/server/modules/logging/nologging.pike foreign_ident
+/server/modules/misc/contenttypes.pike foreign_ident
+/server/modules/misc/ismap.pike foreign_ident
+/server/modules/misc/userdb.pike foreign_ident
+/server/modules/proxies/connect.pike foreign_ident
+/server/modules/proxies/ftpgateway.pike foreign_ident
+/server/modules/proxies/gopher.pike foreign_ident
+/server/modules/proxies/proxy.pike foreign_ident
+/server/modules/proxies/wais.pike foreign_ident
+/server/modules/scripting/cgi.pike foreign_ident
+/server/modules/scripting/fcgi.pike foreign_ident
+/server/modules/scripting/pikescript.pike foreign_ident
+/server/modules/tags/header.pike foreign_ident
+/server/modules/tags/htmlparse.pike foreign_ident
+/server/modules/tags/indirect_href.pike foreign_ident
+/server/modules/tags/language.pike foreign_ident
+/server/modules/tags/lpctag.pike foreign_ident
+/server/modules/tags/tablify.pike foreign_ident
+/server/modules/tags/tablist.pike foreign_ident
+/server/modules/tags/variable.pike foreign_ident
