--- a/.gitattributes
+++ b/.gitattributes
@@ -25,6 +25,8 @@
 /extern/fast_cgi/libfcgi/fcgi_stdio.c foreign_ident
 /extern/fast_cgi/libfcgi/fcgiapp.c foreign_ident
 /extern/fast_cgi/libfcgi/strerror.c foreign_ident
+/server/base_server/roxen.pike foreign_ident
+/server/base_server/roxenloader.pike foreign_ident
 /server/bin/garbagecollector.pike foreign_ident
 /server/modules/directories/directories.pike foreign_ident
 /server/modules/directories/fastdir.pike foreign_ident
