--- a/.gitattributes
+++ b/.gitattributes
@@ -25,10 +25,41 @@
 /extern/fast_cgi/libfcgi/fcgi_stdio.c foreign_ident
 /extern/fast_cgi/libfcgi/fcgiapp.c foreign_ident
 /extern/fast_cgi/libfcgi/strerror.c foreign_ident
+/server/base_server/cache.pike foreign_ident
+/server/base_server/configuration.pike foreign_ident
+/server/base_server/db.pike foreign_ident
+/server/base_server/disk_cache.pike foreign_ident
+/server/base_server/dummy_hosts.pike foreign_ident
+/server/base_server/hosts.pike foreign_ident
+/server/base_server/html.pike foreign_ident
+/server/base_server/http.pike foreign_ident
+/server/base_server/language.pike foreign_ident
+/server/base_server/lock.pike foreign_ident
+/server/base_server/mainconfig.pike foreign_ident
+/server/base_server/module.pike foreign_ident
+/server/base_server/module_support.pike foreign_ident
+/server/base_server/newdecode.pike foreign_ident
+/server/base_server/persistent.pike foreign_ident
+/server/base_server/read_config.pike foreign_ident
 /server/base_server/roxen.pike foreign_ident
+/server/base_server/roxenlib.pike foreign_ident
 /server/base_server/roxenloader.pike foreign_ident
+/server/base_server/socket.pike foreign_ident
 /server/bin/garbagecollector.pike foreign_ident
+/server/bin/install.pike foreign_ident
+/server/etc/roxen_master.pike foreign_ident
 /server/etc/supports foreign_ident
+/server/languages/catala.pike foreign_ident
+/server/languages/dutch.pike foreign_ident
+/server/languages/english.pike foreign_ident
+/server/languages/finnish.pike foreign_ident
+/server/languages/french.pike foreign_ident
+/server/languages/german.pike foreign_ident
+/server/languages/japanese.pike foreign_ident
+/server/languages/norwegian.pike foreign_ident
+/server/languages/portuguese.pike foreign_ident
+/server/languages/spanish.pike foreign_ident
+/server/languages/swedish.pike foreign_ident
 /server/modules/directories/directories.pike foreign_ident
 /server/modules/directories/fastdir.pike foreign_ident
 /server/modules/directories/indexfiles.pike foreign_ident
@@ -62,3 +93,19 @@
 /server/modules/tags/tablify.pike foreign_ident
 /server/modules/tags/tablist.pike foreign_ident
 /server/modules/tags/variable.pike foreign_ident
+/server/more_modules/bofh.pike foreign_ident
+/server/more_modules/clock.pike foreign_ident
+/server/more_modules/configure.pike foreign_ident
+/server/more_modules/lysator.pike foreign_ident
+/server/protocols/ftp.pike foreign_ident
+/server/protocols/gopher.pike foreign_ident
+/server/protocols/http.pike foreign_ident
+/server/protocols/ssl.pike foreign_ident
+/server/unfinishedmodules/deepthought.pike foreign_ident
+/server/unfinishedmodules/extended_logger.pike foreign_ident
+/server/unfinishedmodules/fastcgi.pike foreign_ident
+/server/unfinishedmodules/hedbor.pike foreign_ident
+/server/unfinishedmodules/javascript.pike foreign_ident
+/server/unfinishedmodules/mountserver.pike foreign_ident
+/server/unfinishedmodules/tree.pike foreign_ident
+/server/unfinishedmodules/whois++.pike foreign_ident
