--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 *.gz binary
 *.jpg binary
 /server/modules/proxies/gopher.pike -text -crlf
+*.ppm binary
 
 # Handling of foreign (ie CVS) identifiers.
 #
@@ -26,6 +27,7 @@
 /extern/fast_cgi/libfcgi/fcgiapp.c foreign_ident
 /extern/fast_cgi/libfcgi/strerror.c foreign_ident
 /server/base_server/cache.pike foreign_ident
+/server/base_server/config/draw_things.pike foreign_ident
 /server/base_server/configuration.pike foreign_ident
 /server/base_server/db.pike foreign_ident
 /server/base_server/disk_cache.pike foreign_ident
@@ -36,7 +38,6 @@
 /server/base_server/language.pike foreign_ident
 /server/base_server/lock.pike foreign_ident
 /server/base_server/mainconfig.pike foreign_ident
-/server/base_server/module.pike foreign_ident
 /server/base_server/module_support.pike foreign_ident
 /server/base_server/newdecode.pike foreign_ident
 /server/base_server/persistent.pike foreign_ident
