--- a/.gitattributes
+++ b/.gitattributes
@@ -27,6 +27,7 @@ font binary
 /extern/fast_cgi/libfcgi/fcgiapp.c foreign_ident
 /extern/fast_cgi/libfcgi/strerror.c foreign_ident
 /server/base_server/cache.pike foreign_ident
+/server/base_server/color.pike foreign_ident
 /server/base_server/config/draw_things.pike foreign_ident
 /server/base_server/configuration.pike foreign_ident
 /server/base_server/db.pike foreign_ident
