Italian language module by Francesco Chemolli <kinkie@sephiro.cdc.polimi.it>
Rev: server/languages/italian.pike:1.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -56,6 +56,7 @@ font binary
 /server/languages/finnish.pike foreign_ident
 /server/languages/french.pike foreign_ident
 /server/languages/german.pike foreign_ident
+/server/languages/italian.pike foreign_ident
 /server/languages/japanese.pike foreign_ident
 /server/languages/maori.pike foreign_ident
 /server/languages/norwegian.pike foreign_ident
