Makefile.in  	Fixat lite buggar.
CHANGES INSTALLING README:

	Uppdaterade, release specifika (speciellt INSTALLING). Måste
	uppdateras innan varje ny release.


server/base_server/configuration.pike

	Bignum buggade om man använde Mpz. Vet inte varför. Ett
	projekt att fixa tills nästa release.

server/base_server/disk_cache.pike

	Bugfixar. Funkar nu.

server/base_server/mainconfig.pike

	<blockquote> nu del av BODY

server/base_server/privs.pike server/base_server/roxen.pike

	Buggade vid uppgradering, eftersom roxen->variables->audit
	inte fanns.

server/base_server/roxenlib.pike

	Ingen aning om vad jag gjorde här...

server/base_server/config/describers.pike

	Ändrade ...More till More Documentation. Snyggare så.

server/bin/garbagecollector.pike

	stdin gick inte att få non-blocking. Använde
		object st = File("stdin");
 	istället.

server/bin/install.pike

	add_constant(roxen, this_object()) - privs.pike ville inte
	kompilera annars.

server/etc/config.html server/etc/restart.html server/etc/welcome.html

	bugfixar (blockquote...).

server/modules/filesystems/userfs.pike

	bugfix i real_file - se CHANGES

server/modules/filters/htaccess.pike

	Stavfel rättat + pekare till NCSAs htaccess dokumentation
	adderad

server/modules/graphics/graphic_text.pike

	bugfix i bevel();

server/modules/logging/home_logger.pike

	bugfix, se CHANGES

server/modules/proxies/proxy.pike

	bugfixar

server/modules/tags/indirect_href.pike

	-stavfel, +syntax exempel

server/fonts/32/urw_itc_avant_garde-demi-r

	används ju at graphics_text.pike

Rev: CHANGES:1.13
Rev: INSTALLING:1.3
Rev: Makefile.in:1.3
Rev: README:1.4
Rev: server/base_server/config/describers.pike:1.12
Rev: server/base_server/configuration.pike:1.9
Rev: server/base_server/disk_cache.pike:1.10
Rev: server/base_server/mainconfig.pike:1.26
Rev: server/base_server/privs.pike:1.2
Rev: server/base_server/roxen.pike:1.20
Rev: server/base_server/roxenlib.pike:1.6
Rev: server/bin/garbagecollector.pike:1.5
Rev: server/bin/in

--- a/Makefile.in
+++ b/Makefile.in
@@ -14,7 +14,7 @@ clean:
 
 install: all
 	$(SRCDIR)/mkdir -p $(prefix)/roxen/
-        -@mv -f $(prefix)/server $(prefix)/server.old
+	-@mv -f $(prefix)/roxen/server $(prefix)/roxen/server.old
 	cp -r $(SRCDIR)/server $(prefix)/roxen/
 	@rm -rf	$(prefix)/roxen/server/CVS $(prefix)/roxen/server/*/CVS\
 		$(prefix)/roxen/server/*/*/CVS
