--- a/extern/configure.in
+++ b/extern/configure.in
@@ -68,7 +68,7 @@ AC_HEADER_STDC
 AC_CHECK_HEADERS(unistd.h stdlib.h stropts.h poll.h malloc.h\
 		 linux/mman.h sys/mman.h sys/lock.h)
 
-AC_HAVE_FUNCS(memmove pipe socketpair poll shutdown bcopy memcpy realloc mlockall wait3 wait4 waitpid plock)
+AC_HAVE_FUNCS(memmove pipe socketpair poll shutdown bcopy memcpy realloc mlockall wait3 wait4 waitpid plock memset)
 
 AC_C_CONST
 AC_TYPE_SIZE_T
