--- a/.gitattributes
+++ b/.gitattributes
@@ -64,6 +64,7 @@ urw_itc_avant_garde-demi-r binary
 /server/languages/maori.pike foreign_ident
 /server/languages/norwegian.pike foreign_ident
 /server/languages/portuguese.pike foreign_ident
+/server/languages/serbian.pike foreign_ident
 /server/languages/spanish.pike foreign_ident
 /server/languages/swedish.pike foreign_ident
 /server/modules/directories/directories.pike foreign_ident
