Forgot to quote the $ in $f.
Rev: extern/Makefile.in:1.8

--- a/extern/Makefile.in
+++ b/extern/Makefile.in
@@ -79,18 +79,18 @@ ssl-localinstall:	ssl
 
 install: roxen_hostname fcgi cgi $(HAVE_SSL)-install $(HAVE_SHUFFLE)-install
 	@for f in roxen_hostname fcgi cgi; do \
-		echo Installing $f...; \
-		/bin/rm -f $(prefix)/roxen/server/bin/$f; \
-		if /bin/cp $f $(prefix)/roxen/server/bin/; then :; \
+		echo Installing $$f...; \
+		/bin/rm -f $(prefix)/roxen/server/bin/$$f; \
+		if /bin/cp $$f $(prefix)/roxen/server/bin/; then :; \
 		else exit 1; fi; \
 	done
 	@echo Done.
 
 localinstall: fcgi roxen_hostname cgi $(HAVE_SSL)-localinstall $(HAVE_SHUFFLE)-localinstall
 	@for f in fcgi roxen_hostname cgi; do \
-		echo Installing $f...; \
-		/bin/rm -f $(SRCDIR)/../server/bin/$f; \
-		if /bin/cp $f $(SRCDIR)/../server/bin/; then :; \
+		echo Installing $$f...; \
+		/bin/rm -f $(SRCDIR)/../server/bin/$$f; \
+		if /bin/cp $$f $(SRCDIR)/../server/bin/; then :; \
 		else exit 1; fi; \
 	done
 	@echo Done.
