Fixed typo in variable-name (Thanks to hei@ea.uebemc.siemens.de (Juergen Heiles)).
Rev: extern/configure.in:1.3

--- a/extern/configure.in
+++ b/extern/configure.in
@@ -102,7 +102,7 @@ if test "$uname_prog" != "no"; then
   if test "$lpc_cv_shuffle" = "SunOS"; then
     case "`uname -r`" in
       5.*) lpc_cv_shuffle="shuffle" ;;
-      *)   lc_cv_shuffle="none"     ;;
+      *)   lpc_cv_shuffle="none"     ;;
     esac
   else
     lpc_cv_shuffle="none"
