--- a/.gitattributes
+++ b/.gitattributes
@@ -74,6 +74,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/filesystems/filesystem.pike foreign_ident
 /server/modules/filesystems/secure_fs.pike foreign_ident
 /server/modules/filesystems/userfs.pike foreign_ident
+/server/modules/filters/hostredirect.pike foreign_ident
 /server/modules/filters/htaccess.pike foreign_ident
 /server/modules/filters/redirect.pike foreign_ident
 /server/modules/filters/relay.pike foreign_ident
