New directory module. This one takes advantage of the RXML-parser and the flik-module to make it's listings. Since it uses the flik-module it can use relative URL's and thus preserve prestates.
Rev: server/modules/directories/directories2.pike:1.1.2.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -68,6 +68,7 @@ urw_itc_avant_garde-demi-r binary
 /server/languages/spanish.pike foreign_ident
 /server/languages/swedish.pike foreign_ident
 /server/modules/directories/directories.pike foreign_ident
+/server/modules/directories/directories2.pike foreign_ident
 /server/modules/directories/fastdir.pike foreign_ident
 /server/modules/directories/indexfiles.pike foreign_ident
 /server/modules/examples/fnord.pike foreign_ident
