--- a/extern/fast_cgi/configure.in
+++ b/extern/fast_cgi/configure.in
@@ -1,4 +1,4 @@
-dnl     $Id: configure.in,v 1.1.1.1 1996/11/11 23:31:40 per Exp $
+dnl     $Id: configure.in,v 1.1.1.1.2.1 1997/03/09 21:47:18 grubba Exp $
 dnl
 dnl     This file is an input file used by the GNU "autoconf" program to
 dnl     generate the file "configure", which is run during the build
@@ -46,11 +46,11 @@ echo checking for fpos functions in stdio.h
 AC_EGREP_HEADER(fpos_t, stdio.h, AC_DEFINE(HAVE_FPOS))
 
 dnl Checks for header files.
-dnl AC_HEADER_STDC
-dnl AC_CHECK_HEADERS(fcntl.h unistd.h)
+AC_HEADER_STDC
+AC_CHECK_HEADERS(fcntl.h unistd.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
-dnl AC_HEADER_TIME
+AC_HEADER_TIME
 
 dnl Checks for library functions.
 dnl AC_FUNC_MEMCMP
