--- a/pike/configure.in
+++ b/pike/configure.in
@@ -1,3 +1,6 @@
 AC_INIT(Makefile.in)
+# This is an ugly hack, but it might work...
+# /grubba
+ac_configure_args="--prefix=."
 AC_CONFIG_SUBDIRS(src)
 AC_OUTPUT(Makefile)
