--- a/Makefile.in
+++ b/Makefile.in
@@ -19,7 +19,9 @@ install: all
 	@rm -rf	$(prefix)/roxen/server/CVS $(prefix)/roxen/server/*/CVS\
 		$(prefix)/roxen/server/*/*/CVS
 	cp pike/src/pike $(prefix)/roxen/server/bin
-	cp -r pike/src/lib $(prefix)/roxen/server/
+	test -d $(prefix)/roxen/server/lib || mkdir $(prefix)/roxen/server/lib
+	test -d $(prefix)/roxen/server/lib/pike || mkdir $(prefix)/roxen/server/lib/pike
+	cp -r pike/src/lib/* $(prefix)/roxen/server/lib/pike/
 	-@$(SRCDIR)/mkdir -p $(prefix)/roxen/logs
 	-@$(SRCDIR)/mkdir -p $(prefix)/roxen/configurations
 	@(cd extern;$(MAKE) install;cd ../)
