--- a/pike/configure.in
+++ b/pike/configure.in
@@ -1,6 +1,12 @@
 AC_INIT(Makefile.in)
-# This is an ugly hack, but it might work...
+# This is an ugly hack, but it seems to work...
 # /grubba
+old_ac_configure_args="$ac_configure_args"
 ac_configure_args="--prefix=."
+echo
+echo "NOTE: Running configure with --prefix=."
+echo "      Don't use this Pike with anything but Roxen without reconfiguring."
+echo
 AC_CONFIG_SUBDIRS(src)
+ac_configure_args="$old_ac_configure_args"
 AC_OUTPUT(Makefile)
