Now sets and uses $(MAKE)
Rev: pike/Makefile.in:1.2
Rev: pike/configure.in:1.4

--- a/pike/Makefile.in
+++ b/pike/Makefile.in
@@ -1,8 +1,10 @@
+@SET_MAKE@
+
 all:
-	(cd src;make)
+	(cd src; $(MAKE))
 
 clean:
-	(cd src;make clean)
+	(cd src; $(MAKE) clean)
 
 spotless:
-	(cd src;make spotless)
+	(cd src; $(MAKE) spotless)
