Now sets and uses $(MAKE)
Rev: Makefile.in:1.3.2.3
Rev: configure.in:1.1.1.1.2.1
Rev: extern/fast_cgi/Makefile.in:1.1.1.1.2.1
Rev: extern/fast_cgi/configure.in:1.1.1.1.2.2
Rev: pike/Makefile.in:1.2
Rev: pike/configure.in:1.4

--- a/Makefile.in
+++ b/Makefile.in
@@ -3,6 +3,8 @@ SRCDIR=@srcdir@
 VPATH=@srcdir@
 prefix=@prefix@
 
+@SET_MAKE@
+
 all:	extern pike
 	@(cd extern;$(MAKE) all;cd ..)
 	@(cd pike/src;$(MAKE);cd ..)
