--- a/extern/fast_cgi/configure.in
+++ b/extern/fast_cgi/configure.in
@@ -1,4 +1,4 @@
-dnl     $Id: configure.in,v 1.1.1.1.2.1 1997/03/09 21:47:18 grubba Exp $
+dnl     $Id: configure.in,v 1.1.1.1.2.2 1997/03/17 21:04:49 grubba Exp $
 dnl
 dnl     This file is an input file used by the GNU "autoconf" program to
 dnl     generate the file "configure", which is run during the build
@@ -12,6 +12,9 @@ CCDEFS="$DEFS"
 
 AC_INIT(libfcgi/fcgiapp.c)
 AC_CONFIG_HEADER(include/fcgi_config.h)
+
+AC_SET_MAKE
+
 AC_PROG_CC
 AC_PROG_RANLIB
 AC_EGREP_HEADER(sun_len, sys/un.h, AC_DEFINE(HAVE_SOCKADDR_UN_SUN_LEN))
