--- a/extern/configure.in
+++ b/extern/configure.in
@@ -1,7 +1,5 @@
 AC_INIT(cgi.c)
 AC_PROG_CC
-AC_C_CROSS
-
 AC_SET_MAKE
 
 AC_CHECK_LIB(socket, socket)
@@ -68,9 +66,9 @@ AC_HEADER_STDC
 
 
 AC_CHECK_HEADERS(unistd.h stdlib.h stropts.h poll.h malloc.h\
-		 linux/mman.h sys/mman.h sys/lock.h)
+		 linux/mman.h sys/mman.h sys/lock.h sys/resource.h)
 
-AC_HAVE_FUNCS(memmove pipe socketpair poll shutdown bcopy memcpy realloc mlockall wait3 wait4 waitpid plock memset)
+AC_HAVE_FUNCS(memmove setrlimit pipe socketpair poll shutdown bcopy memcpy realloc mlockall wait3 wait4 waitpid plock memset nice)
 
 AC_C_CONST
 AC_TYPE_SIZE_T
