Added new targets install_all and install_pike.
Rev: Makefile.in:1.8

--- a/Makefile.in
+++ b/Makefile.in
@@ -28,6 +28,8 @@ clean:
 	@(cd extern;$(MAKE) clean)
 	@(cd pike/src;$(MAKE) clean)
 
+install_all: install_pike install
+
 install: all
 	$(SRCDIR)/mkdir -p $(prefix)/roxen/
 	-@mv -f $(prefix)/roxen/server $(prefix)/roxen/server.old
@@ -42,6 +44,9 @@ install: all
 	-@$(SRCDIR)/mkdir -p $(prefix)/roxen/configurations
 	@(cd extern;$(MAKE) install;cd ../)
 
+
+install_pike: all
+	@(cd pike/src;$(MAKE) install)
 
 localinstall: all
 	cp pike/src/pike $(SRCDIR)/server/bin/
