--- a/Makefile.in
+++ b/Makefile.in
@@ -34,12 +34,12 @@ install: all
 	$(SRCDIR)/mkdir -p $(prefix)/roxen/
 	-@if test -d $(prefix)/roxen/server.old/.; then \
 	  if test -d $(prefix)/roxen/server.older/.; then \
-	    echo \
-	    echo "Warning, deleting old server \"$(prefix)/roxen/server.older\"" \
-	    echo \
-	    rm -rf $(prefix)/roxen/server.older \
+	    echo; \
+	    echo "Warning, deleting old server \"$(prefix)/roxen/server.older\""; \
+	    echo; \
+	    rm -rf $(prefix)/roxen/server.older; \
 	  fi; \
-	  mv -f $(prefix)/roxen/server.old $(prefix)/roxen/server.older \
+	  mv -f $(prefix)/roxen/server.old $(prefix)/roxen/server.older; \
 	fi
 	-@mv -f $(prefix)/roxen/server $(prefix)/roxen/server.old
 	cp -r $(SRCDIR)/server $(prefix)/roxen/
