Added check for inline.
Rev: extern/configure.in:1.7

--- a/extern/configure.in
+++ b/extern/configure.in
@@ -2,6 +2,8 @@ AC_INIT(cgi.c)
 AC_PROG_CC
 AC_SET_MAKE
 
+AC_C_INLINE
+
 AC_CHECK_LIB(socket, socket)
 AC_CHECK_LIB(nsl, main)
 AC_CHECK_LIB(resolv, gethostbyname)
