Added Id to lots of files.
Rev: server/base_server/config/builders.pike:1.7
Rev: server/base_server/config/describers.pike:1.26
Rev: server/base_server/config/low_describers.pike:1.8
Rev: server/base_server/config/savers.pike:1.4
Rev: server/base_server/fonts.pike:1.6
Rev: server/base_server/module.pike:1.14
Rev: server/base_server/proxyauth.pike:1.4
Rev: server/base_server/restorable.pike:1.4
Rev: server/base_server/spinnerlib.pike:1.2
Rev: server/base_server/struct/node.pike:1.4
Rev: server/modules/misc/language.pike:1.6
Rev: server/protocols/ssleay.pike:1.6
Rev: tools/convert_accessed.pike:1.4

--- a/.gitattributes
+++ b/.gitattributes
@@ -30,25 +30,35 @@ urw_itc_avant_garde-demi-r binary
 /extern/fast_cgi/libfcgi/strerror.c foreign_ident
 /server/base_server/cache.pike foreign_ident
 /server/base_server/color.pike foreign_ident
+/server/base_server/config/builders.pike foreign_ident
+/server/base_server/config/describers.pike foreign_ident
 /server/base_server/config/draw_things.pike foreign_ident
+/server/base_server/config/low_describers.pike foreign_ident
+/server/base_server/config/savers.pike foreign_ident
 /server/base_server/configuration.pike foreign_ident
 /server/base_server/disk_cache.pike foreign_ident
 /server/base_server/dummy_hosts.pike foreign_ident
+/server/base_server/fonts.pike foreign_ident
 /server/base_server/hosts.pike foreign_ident
 /server/base_server/html.pike foreign_ident
 /server/base_server/http.pike foreign_ident
 /server/base_server/language.pike foreign_ident
 /server/base_server/lock.pike foreign_ident
 /server/base_server/mainconfig.pike foreign_ident
+/server/base_server/module.pike foreign_ident
 /server/base_server/module_support.pike foreign_ident
 /server/base_server/newdecode.pike foreign_ident
 /server/base_server/persistent.pike foreign_ident
 /server/base_server/privs.pike foreign_ident
+/server/base_server/proxyauth.pike foreign_ident
 /server/base_server/read_config.pike foreign_ident
+/server/base_server/restorable.pike foreign_ident
 /server/base_server/roxen.pike foreign_ident
 /server/base_server/roxenlib.pike foreign_ident
 /server/base_server/roxenloader.pike foreign_ident
 /server/base_server/socket.pike foreign_ident
+/server/base_server/spinnerlib.pike foreign_ident
+/server/base_server/struct/node.pike foreign_ident
 /server/bin/garbagecollector.pike foreign_ident
 /server/bin/install.pike foreign_ident
 /server/etc/roxen_master.pike foreign_ident
@@ -88,6 +98,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/logging/nologging.pike foreign_ident
 /server/modules/misc/contenttypes.pike foreign_ident
 /server/modules/misc/ismap.pike foreign_ident
+/server/modules/misc/language.pike foreign_ident
 /server/modules/misc/userdb.pike foreign_ident
 /server/modules/proxies/connect.pike foreign_ident
 /server/modules/proxies/ftpgateway.pike foreign_ident
@@ -113,6 +124,7 @@ urw_itc_avant_garde-demi-r binary
 /server/protocols/http.pike foreign_ident
 /server/protocols/ssl.pike foreign_ident
 /server/protocols/ssl3.pike foreign_ident
+/server/protocols/ssleay.pike foreign_ident
 /server/unfinishedmodules/deepthought.pike foreign_ident
 /server/unfinishedmodules/extended_logger.pike foreign_ident
 /server/unfinishedmodules/fastcgi.pike foreign_ident
@@ -121,3 +133,4 @@ urw_itc_avant_garde-demi-r binary
 /server/unfinishedmodules/mountserver.pike foreign_ident
 /server/unfinishedmodules/tree.pike foreign_ident
 /server/unfinishedmodules/whois++.pike foreign_ident
+/tools/convert_accessed.pike foreign_ident
