--- a/Makefile.in
+++ b/Makefile.in
@@ -46,7 +46,7 @@ install: all
 	@rm -rf	$(prefix)/roxen/server/CVS $(prefix)/roxen/server/*/CVS\
 		$(prefix)/roxen/server/*/*/CVS
 	cp pike/src/pike $(prefix)/roxen/server/bin
-	cp pike/bin/feature_list $(prefix)/roxen/server/bin
+	cp $(SRCDIR)/pike/bin/feature_list $(prefix)/roxen/server/bin
 	test -d $(prefix)/roxen/server/lib || mkdir $(prefix)/roxen/server/lib
 	test -d $(prefix)/roxen/server/lib/pike || mkdir $(prefix)/roxen/server/lib/pike
 	cp -r pike/src/lib/* $(prefix)/roxen/server/lib/pike/
@@ -55,9 +55,9 @@ install: all
 	-chmod a+x $(prefix)
 	-chmod a+x $(prefix)/roxen
 	-chmod a+x $(prefix)/roxen/server
-	chmod -R a+r $(prefix)/roxen/server/fonts $(prefix)/roxen/server/nfonts
-	find $(prefix)/roxen/server/fonts -type d -exec chmod a+x '{}' \;
-	find $(prefix)/roxen/server/nfonts -type d -exec chmod a+x '{}' \;
+	-chmod -R a+r $(prefix)/roxen/server/fonts $(prefix)/roxen/server/nfonts
+	-find $(prefix)/roxen/server/fonts -type d -exec chmod a+x '{}' \;
+	-find $(prefix)/roxen/server/nfonts -type d -exec chmod a+x '{}' \;
 	@(cd extern;$(MAKE) install;cd ../)
 
 
