--- a/extern/configure.in
+++ b/extern/configure.in
@@ -9,13 +9,21 @@ AC_CHECK_LIB(socket, socket)
 AC_CHECK_LIB(nsl, main)
 AC_CHECK_LIB(resolv, gethostbyname)
 
+AC_HEADER_DIRENT
+AC_HEADER_STDC
+
+AC_CHECK_HEADERS(unistd.h stdlib.h stropts.h poll.h malloc.h arpa/inet.h\
+		 linux/mman.h sys/mman.h sys/lock.h sys/resource.h)
+
 AC_MSG_CHECKING(existance of h_errno)
 AC_CACHE_VAL(pike_cv_h_errno, [
   AC_TRY_LINK([
 #include <sys/types.h>
 #include <sys/socket.h>
 #include <netinet/in.h>
+#ifdef HAVE_ARPA_INET_H
 #include <arpa/inet.h>
+#endif /* HAVE_ARPA_INET_H */
 #include <netdb.h>
   ],[
 int main(int argc, char **argv)
@@ -83,13 +91,6 @@ if test "$lpc_cv_sys_signal_oneshot" = yes; then
 else
   AC_MSG_RESULT(no)
 fi
-
-AC_HEADER_DIRENT
-AC_HEADER_STDC
-
-
-AC_CHECK_HEADERS(unistd.h stdlib.h stropts.h poll.h malloc.h\
-		 linux/mman.h sys/mman.h sys/lock.h sys/resource.h)
 
 AC_HAVE_FUNCS(memmove setrlimit pipe socketpair poll shutdown bcopy memcpy realloc mlockall wait3 wait4 waitpid plock memset nice)
 
