--- a/extern/fast_cgi/configure.in
+++ b/extern/fast_cgi/configure.in
@@ -1,4 +1,4 @@
-dnl     $Id: configure.in,v 1.3 1997/05/26 00:52:51 grubba Exp $
+dnl     $Id: configure.in,v 1.4 1997/06/01 15:43:13 grubba Exp $
 dnl
 dnl     This file is an input file used by the GNU "autoconf" program to
 dnl     generate the file "configure", which is run during the build
@@ -18,6 +18,8 @@ AC_SET_MAKE
 AC_PROG_CC
 AC_PROG_RANLIB
 AC_EGREP_HEADER(sun_len, sys/un.h, AC_DEFINE(HAVE_SOCKADDR_UN_SUN_LEN))
+
+AC_CHECK_HEADERS(arpa/inet.h)
 
 #--------------------------------------------------------------------
 #  What extra libraries do we need for this platform?
