Now sets POSIX_SOURCE.
Rev: extern/configure.in:1.11

--- a/extern/configure.in
+++ b/extern/configure.in
@@ -9,6 +9,8 @@ AC_CHECK_LIB(socket, socket)
 AC_CHECK_LIB(nsl, main)
 AC_CHECK_LIB(resolv, gethostbyname)
 
+AC_DEFINE(POSIX_SOURCE)
+
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 
