--- a/Makefile.in
+++ b/Makefile.in
@@ -50,16 +50,19 @@ install: all
 	test -d $(prefix)/roxen/server/lib || mkdir $(prefix)/roxen/server/lib
 	test -d $(prefix)/roxen/server/lib/pike || mkdir $(prefix)/roxen/server/lib/pike
 	cp -r pike/src/lib/* $(prefix)/roxen/server/lib/pike/
+	-@(cd extern;$(MAKE) install;cd ../)
 	-@$(SRCDIR)/mkdir -p $(prefix)/roxen/logs
 	-@$(SRCDIR)/mkdir -p $(prefix)/roxen/configurations
 	-chmod a+x $(prefix)
 	-chmod a+x $(prefix)/roxen
 	-chmod a+x $(prefix)/roxen/server
-	-chmod -R a+r $(prefix)/roxen/server/fonts $(prefix)/roxen/server/nfonts
-	-find $(prefix)/roxen/server/fonts -type d -exec chmod a+x '{}' \;
-	-find $(prefix)/roxen/server/nfonts -type d -exec chmod a+x '{}' \;
-	@(cd extern;$(MAKE) install;cd ../)
-
+	-@for d in fonts nfonts modules etc bin base_rserver more_modules \
+	           language roxen-images protocols unfinishedmodules; do ; \
+	  echo Modifying permissions for directory $(prefix)/roxen/server/$$d... ; \
+	  find $(prefix)/roxen/server/$$d -type d -exec chmod a+x '{}' \; ; \
+	  chmod -R a+r $(prefix)/roxen/server/$$d ;\
+	done
+	@echo Roxen installed.
 
 install_pike: all
 	@(cd pike/src;$(MAKE) install)
