--- a/.gitattributes
+++ b/.gitattributes
@@ -100,6 +100,7 @@ urw_itc_avant_garde-demi-r binary
 /server/modules/misc/ismap.pike foreign_ident
 /server/modules/misc/language.pike foreign_ident
 /server/modules/misc/userdb.pike foreign_ident
+/server/modules/misc/ypuserdb.pike foreign_ident
 /server/modules/proxies/connect.pike foreign_ident
 /server/modules/proxies/ftpgateway.pike foreign_ident
 /server/modules/proxies/gopher.pike foreign_ident
