Added some nfonts.
Rev: server/nfonts/32/avant_garde/bi:1.1
Rev: server/nfonts/32/avant_garde/bn:1.1
Rev: server/nfonts/32/avant_garde/ni:1.1
Rev: server/nfonts/32/avant_garde/nn:1.1
Rev: server/nfonts/32/lucida/bi:1.1
Rev: server/nfonts/32/lucida/bn:1.1
Rev: server/nfonts/32/lucida/ni:1.1
Rev: server/nfonts/32/lucida/nn:1.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,8 +4,12 @@
 *.gz binary
 /server/modules/proxies/gopher.pike -text -crlf
 *.ppm binary
+bi binary
+bn binary
 button_font binary
 font binary
+ni binary
+nn binary
 urw_itc_avant_garde-demi-r binary
 
 # Handling of foreign (ie CVS) identifiers.
